WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185040
Regression(
r222392
?): Events can have a negative timestamp which causes app breakage
https://bugs.webkit.org/show_bug.cgi?id=185040
Summary
Regression(r222392?): Events can have a negative timestamp which causes app b...
Chris Dumez
Reported
2018-04-26 12:41:43 PDT
Events can have a negative timestamp which causes app breakage. This may have been a regression from
r222392
. To reproduce: 1. Open
https://codepen.io/cdumez/pen/xjEmdX
in MobileSafari 2. Tap the red box and notice that the touchstart / touchend event timestamps are positive. 3. Put MobileSafari in the background for ~5 minutes then re-open MobileSafari 4. Tap the red box again and notice that the touchstart / touchend event timestamps are now negative :(
Attachments
Patch
(1.54 KB, patch)
2018-04-27 10:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-04-26 12:42:02 PDT
<
rdar://problem/39638051
>
Chris Dumez
Comment 2
2018-04-27 09:40:14 PDT
The actual fix is in UIKit when generating the touch's timestamp. I will use this bug to do some hardening in WebKit to make sure Event.timestamp can never return a negative value.
Chris Dumez
Comment 3
2018-04-27 10:52:50 PDT
Created
attachment 339005
[details]
Patch
WebKit Commit Bot
Comment 4
2018-04-27 14:21:35 PDT
Comment on
attachment 339005
[details]
Patch Clearing flags on attachment: 339005 Committed
r231111
: <
https://trac.webkit.org/changeset/231111
>
WebKit Commit Bot
Comment 5
2018-04-27 14:21:37 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 6
2019-02-06 09:18:25 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug