Regression(r222392?): Events can have a negative timestamp which causes app breakage https://bugs.webkit.org/show_bug.cgi?id=185040 <rdar://problem/39638051>

Reviewed by Wenson Hsieh.

The real fix is in UIKit when generating the touch timestamps. However, this patch
does some hardening to make sure that Event.timestamp can never return a negative
value even if something goes wrong.

* dom/Event.cpp:
(WebCore::Event::timeStampForBindings const):


Canonical link: https://commits.webkit.org/200577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231111 268f45cc-cd09-0410-ab3c-d52691b4dbfc